@@ -8,6 +8,9 @@ py['blog_description'] = "blosxom with a touch of python"
 # What's this blog's primary language (for outgoing RSS feed)?
 py['blog_language'] = "en"
 
+# Encoding for output. Default is iso-8859-1.
+py['blog_encoding'] = "iso-8859-1"
+
 # Where are this blog's entries kept?
 py['datadir'] = "/path/to/blog"
 
